[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Highrise <server@high.rs>"]
packages = [
    { include = "hr", from = "src" },
    { include = "fbs", from = "vendor" },
    { include = "fbs_models", from = "vendor" },
    { include = "hr", from = "vendor" },
]
include = ["*.json"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
